--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   font-style: normal;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .techs__subtitle {
